...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movies-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="414" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EkO-8S-o2K">
                                <rect key="frame" x="0.0" y="36" width="414" height="826"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EkO-8S-o2K" secondAttribute="trailing" id="PYK-h6-7P7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EkO-8S-o2K" secondAttribute="bottom" id="x6f-jb-zyD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="jAN-LR-ui5">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="eR7-0v-Ad9">
                            <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="AV1-bF-uxf" kind="show" id="wrb-NM-0LG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="addMoviePosterWithSender:" destination="AV1-bF-uxf" eventType="touchUpInside" id="XwQ-Ez-Nat"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Movie Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KRj-Nk-91w">
                                <rect key="frame" x="195" y="140" width="200" height="34"/>
                                <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="KdG-2n-eEH"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="20" y="808" width="380" height="44"/>
                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="c2R-ac-UYo"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Add">
                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
