...
        movieOverviewTextView.resignFirstResponder()
        movieTitleTextField.resignFirstResponder()
    }
    
    private func showAlert(title: String, message: String) {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        self.present(alertController, animated: true, completion: nil)
    }
    
    @IBAction func addMoviePoster(sender: UIButton) {
        present(imagePickerController, animated: true, completion: nil)
    }
...
                delegate?.addMovieViewController(self, didAddPersonalMovie: personalMovie)
                if let navigationController = parent as? UINavigationController {
                    navigationController.popViewController(animated: true)
                }
            }
        } catch PersonalMovieBuilderError.moviePosterImageNotFound {
            showAlert(title: "Missing Field", message: "Looks like you've forgotten to add a poster for your movie.")
        } catch PersonalMovieBuilderError.movieTitleNotFound {
            showAlert(title: "Missing Field", message: "Looks like you've forgotten to add a title for your movie.")
        } catch PersonalMovieBuilderError.movieOverviewNotFound {
            showAlert(title: "Missing Field", message: "Looks like you've forgotten to add an overview for your movie.")
        } catch PersonalMovieBuilderError.movieReleaseDateNotFound {
            showAlert(title: "Missing Field", message: "Looks like you've forgotten to add a release date for your movie.")
...
